JP-23 #resolve raised MaxPermSize to 128m